solved overflow

--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,10 @@
   padding: 0;
   box-sizing: border-box;
 }
+html{
+  width: 100vw;
+  overflow-x: hidden;
+}
 body {
   font-family: "Poppins",sans-serif;
   font-weight: 500;
